// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDataGridDisplaySelector displaySelector allows consumers to customize render order via a render prop 1`] = `
<div
  data-test-subj="customRender"
>
  <div>
    Hello world
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-columnCompressed"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Density
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <fieldset
        class="euiButtonGroup emotion-euiButtonGroup-fullWidth"
        data-test-subj="densityButtonGroup"
        id="generated-id"
      >
        <legend
          class="emotion-euiScreenReaderOnly"
        >
          Density
        </legend>
        <div
          class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-compressed"
        >
          <button
            aria-pressed="false"
            class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
            data-test-subj="compact"
            title="Compact"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
            >
              <span
                class="eui-textTruncate emotion-euiButtonGroupButton__text"
                data-text="Compact"
              >
                Compact
              </span>
            </span>
          </button>
          <button
            aria-pressed="false"
            class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
            data-test-subj="normal"
            title="Normal"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
            >
              <span
                class="eui-textTruncate emotion-euiButtonGroupButton__text"
                data-text="Normal"
              >
                Normal
              </span>
            </span>
          </button>
          <button
            aria-pressed="false"
            class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
            data-test-subj="expanded"
            title="Expanded"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
            >
              <span
                class="eui-textTruncate emotion-euiButtonGroupButton__text"
                data-text="Expanded"
              >
                Expanded
              </span>
            </span>
          </button>
        </div>
      </fieldset>
    </div>
  </div>
  <div>
    Mock custom control
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-columnCompressed"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Lines per row
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
        id="generated-id"
      >
        <fieldset
          class="euiButtonGroup emotion-euiButtonGroup-fullWidth-RowHeightControl"
          data-test-subj="rowHeightButtonGroup"
        >
          <legend
            class="emotion-euiScreenReaderOnly"
          >
            Lines per row
          </legend>
          <div
            class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-compressed"
          >
            <button
              aria-pressed="false"
              class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
              data-test-subj="auto"
              title="Auto"
              type="button"
            >
              <span
                class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
              >
                <span
                  class="eui-textTruncate emotion-euiButtonGroupButton__text"
                  data-text="Auto"
                >
                  Auto
                </span>
              </span>
            </button>
            <button
              aria-pressed="true"
              class="euiButtonGroupButton euiButtonGroupButton-isSelected emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-fill-text"
              data-test-subj="static"
              title="Static"
              type="button"
            >
              <span
                class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
              >
                <span
                  class="eui-textTruncate emotion-euiButtonGroupButton__text"
                  data-text="Static"
                >
                  Static
                </span>
              </span>
            </button>
          </div>
        </fieldset>
        <div
          class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-label="Lines per row"
              class="euiFieldNumber emotion-euiFieldNumber-compressed"
              data-test-subj="lineCountNumber"
              max="20"
              min="1"
              step="any"
              type="number"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`useDataGridDisplaySelector displaySelector renders a toolbar button/popover allowing users to customize display settings 1`] = `
<body>
  <div>
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      data-test-subj="dataGridDisplaySelectorPopover"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Display options"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="dataGridDisplaySelectorButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="controls"
          />
        </button>
      </span>
    </div>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel euiDataGrid__displayPopoverPanel emotion-euiPanel-grow-m-s-plain-euiPopover__panel-light-hasTransform"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -18px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__arrowWrapper emotion-euiPopoverArrowWrapper"
          style="left: 9px; bottom: 100%;"
        >
          <div
            class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
            data-popover-arrow="bottom"
          />
        </div>
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div>
          <div
            class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-columnCompressed"
            id="generated-id-row"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                for="generated-id"
                id="generated-id-label"
              >
                Density
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <fieldset
                class="euiButtonGroup emotion-euiButtonGroup-fullWidth"
                data-test-subj="densityButtonGroup"
                id="generated-id"
              >
                <legend
                  class="emotion-euiScreenReaderOnly"
                >
                  Density
                </legend>
                <div
                  class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-compressed"
                >
                  <button
                    aria-pressed="false"
                    class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
                    data-test-subj="compact"
                    title="Compact"
                    type="button"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                    >
                      <span
                        class="eui-textTruncate emotion-euiButtonGroupButton__text"
                        data-text="Compact"
                      >
                        Compact
                      </span>
                    </span>
                  </button>
                  <button
                    aria-pressed="false"
                    class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
                    data-test-subj="normal"
                    title="Normal"
                    type="button"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                    >
                      <span
                        class="eui-textTruncate emotion-euiButtonGroupButton__text"
                        data-text="Normal"
                      >
                        Normal
                      </span>
                    </span>
                  </button>
                  <button
                    aria-pressed="false"
                    class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
                    data-test-subj="expanded"
                    title="Expanded"
                    type="button"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                    >
                      <span
                        class="eui-textTruncate emotion-euiButtonGroupButton__text"
                        data-text="Expanded"
                      >
                        Expanded
                      </span>
                    </span>
                  </button>
                </div>
              </fieldset>
            </div>
          </div>
          <div
            class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-columnCompressed"
            id="generated-id-row"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                for="generated-id"
                id="generated-id-label"
              >
                Lines per row
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
                id="generated-id"
              >
                <fieldset
                  class="euiButtonGroup emotion-euiButtonGroup-fullWidth-RowHeightControl"
                  data-test-subj="rowHeightButtonGroup"
                >
                  <legend
                    class="emotion-euiScreenReaderOnly"
                  >
                    Lines per row
                  </legend>
                  <div
                    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-compressed"
                  >
                    <button
                      aria-pressed="false"
                      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
                      data-test-subj="auto"
                      title="Auto"
                      type="button"
                    >
                      <span
                        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                      >
                        <span
                          class="eui-textTruncate emotion-euiButtonGroupButton__text"
                          data-text="Auto"
                        >
                          Auto
                        </span>
                      </span>
                    </button>
                    <button
                      aria-pressed="true"
                      class="euiButtonGroupButton euiButtonGroupButton-isSelected emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-fill-text"
                      data-test-subj="static"
                      title="Static"
                      type="button"
                    >
                      <span
                        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                      >
                        <span
                          class="eui-textTruncate emotion-euiButtonGroupButton__text"
                          data-text="Static"
                        >
                          Static
                        </span>
                      </span>
                    </button>
                  </div>
                </fieldset>
                <div
                  class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-label="Lines per row"
                      class="euiFieldNumber emotion-euiFieldNumber-compressed"
                      data-test-subj="lineCountNumber"
                      max="20"
                      min="1"
                      step="any"
                      type="number"
                      value="1"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;
